[package]
name = "good-web-game"
version = "0.3.0"
authors = ["not-fl3 <not.fl3@gmail.com>", "PSteinhaus"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
bitflags = "1.1.0"
rustc-hash = "1.0.1"
lazy_static = "1.3.0"
mint = "0.5"
cgmath = { version = "0.17", features = ["mint"] }
#miniquad_text_rusttype = { git = "https://github.com/not-fl3/miniquad_text_rusttype", branch = "0.3" }
glyph_brush = "0.7"
miniquad = "0.3.0-alpha.37"
image = { version = "0.22", default-features = false, features = ["png_codec"] }
serde = "1"
serde_derive = "1"
log = "0.4"
tar = { version = "0.4", default-features = false }
lyon = { version = "0.17.5", optional = true }
smart-default = "0.6"
quad-snd = "0.1.0-alpha.1"
zip = { version = "0.5", default-features = false }
approx = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gilrs = "0.8"

[features]
default = [ "mesh" ]
mesh = [ "lyon" ]
log-impl = ["miniquad/log-impl"]
jpeg = [ "image/jpeg" ]

[dev-dependencies]
quad-rand = "0.2.1"
oorandom = "11"
#getrandom = { version = "0.2", features = ["js"] }
glam = { version = "0.17.3", features = ["mint"]}
keyframe = "1.0.4"
keyframe_derive = "1.0.0"
num-traits = "0.2"
num-derive = "0.3"
