[package]
name = "good-web-game"
version = "0.6.0"
authors = ["not-fl3 <not.fl3@gmail.com>", "PSteinhaus"]
license = "MIT"
edition = "2021"
description = "An alternative implementation of the ggez game engine, based on miniquad"
repository = "https://github.com/ggez/good-web-game"
keywords = ["game", "ggez", "miniquad", "2D", "engine"]
readme = "README.md"
categories = ["game-engines"]
exclude = [
    "about",
    "examples/resources.tar",
    "resources",
    "!LiberationMono-Regular.ttf"
]

[dependencies]
bitflags = "1.1.0"
bytemuck = "1.7.2"
bytemuck_derive = "1.0.1"
rustc-hash = "1.0.1"
lazy_static = "1.3.0"
mint = "0.5"
cgmath = { version = "0.17", features = ["mint"] }
twox-hash = "=1.5.0"    # necessary to force a version of rand < 0.8 to avoid getrandom
glyph_brush = "0.7"
miniquad = "=0.3.13"
image = { version = "0.22", default-features = false, features = ["png_codec"] }
serde = "1"
serde_derive = "1"
log = "0.4"
tar = { version = "0.4", default-features = false }
lyon = { version = "0.17.5", optional = true }
smart-default = "0.6"
quad-snd = { version = "0.2.2", optional = true }
zip = { version = "0.5", default-features = false }
approx = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gilrs = "0.8"

[features]
default = [ "mesh", "audio" ]
mesh = [ "lyon" ]
audio = [ "quad-snd" ]
log-impl = ["miniquad/log-impl"]
jpeg = [ "image/jpeg" ]

[dev-dependencies]
quad-rand = "0.2.1"
oorandom = "11"
glam = { version = "0.21.3", features = ["mint", "bytemuck"]}
keyframe = "1.0.4"
keyframe_derive = "1.0.0"
num-traits = "0.2"
num-derive = "0.3"
