[package]
name = "simple"
version = "0.1.0"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"

[dependencies]
[target.wasm32-unknown-unknown.dependencies]
good-web-game = { path = "../.." }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ggez = { git = "https://github.com/ozkriff/ggez", rev = "a23153a18" }
